--- a/pentevo/fpga/current/quartus/top.qsf
+++ b/pentevo/fpga/current/quartus/top.qsf
@@ -147,16 +147,6 @@ set_location_assignment PIN_164 -to rompg2
 set_location_assignment PIN_166 -to romwe_n
 set_location_assignment PIN_167 -to romoe_n
 set_location_assignment PIN_168 -to rras1_n
-set_location_assignment PIN_169 -to ra[4]
-set_location_assignment PIN_170 -to ra[3]
-set_location_assignment PIN_172 -to ra[5]
-set_location_assignment PIN_173 -to ra[2]
-set_location_assignment PIN_174 -to ra[6]
-set_location_assignment PIN_175 -to ra[1]
-set_location_assignment PIN_176 -to ra[7]
-set_location_assignment PIN_177 -to ra[0]
-set_location_assignment PIN_179 -to ra[8]
-set_location_assignment PIN_180 -to ra[9]
 set_location_assignment PIN_182 -to spics_n
 set_location_assignment PIN_183 -to fclk
 set_location_assignment PIN_184 -to spick
@@ -164,22 +154,6 @@ set_location_assignment PIN_186 -to rucas_n
 set_location_assignment PIN_187 -to rwe_n
 set_location_assignment PIN_189 -to rlcas_n
 set_location_assignment PIN_190 -to rras0_n
-set_location_assignment PIN_191 -to rd[8]
-set_location_assignment PIN_192 -to rd[7]
-set_location_assignment PIN_193 -to rd[9]
-set_location_assignment PIN_195 -to rd[6]
-set_location_assignment PIN_196 -to rd[10]
-set_location_assignment PIN_197 -to rd[5]
-set_location_assignment PIN_198 -to rd[11]
-set_location_assignment PIN_199 -to rd[4]
-set_location_assignment PIN_200 -to rd[12]
-set_location_assignment PIN_202 -to rd[3]
-set_location_assignment PIN_203 -to rd[13]
-set_location_assignment PIN_204 -to rd[2]
-set_location_assignment PIN_205 -to rd[14]
-set_location_assignment PIN_206 -to rd[1]
-set_location_assignment PIN_207 -to rd[15]
-set_location_assignment PIN_208 -to rd[0]
 set_location_assignment PIN_90 -to ide_d[13]
 
 # Classic Timing Assignments
@@ -205,7 +179,7 @@ set_global_assignment -name FLEX10K_DEVICE_IO_STANDARD LVTTL/LVCMOS
 set_global_assignment -name OPTIMIZE_HOLD_TIMING OFF
 set_global_assignment -name FITTER_EFFORT "STANDARD FIT"
 set_global_assignment -name SLOW_SLEW_RATE ON
-set_global_assignment -name AUTO_PACKED_REGISTERS "MINIMIZE AREA"
+set_global_assignment -name AUTO_PACKED_REGISTERS NORMAL
 
 # Assembler Assignments
 # =====================
@@ -276,7 +250,33 @@ set_instance_assignment -name GLOBAL_SIGNAL ON -to spics_n
 # end ENTITY(top)
 # ---------------
 set_global_assignment -name FIT_ONLY_ONE_ATTEMPT OFF
-set_global_assignment -name SEED 2
+set_global_assignment -name SEED 3
+set_location_assignment PIN_169 -to dram_ra[4]
+set_location_assignment PIN_170 -to dram_ra[3]
+set_location_assignment PIN_172 -to dram_ra[5]
+set_location_assignment PIN_173 -to dram_ra[2]
+set_location_assignment PIN_174 -to dram_ra[6]
+set_location_assignment PIN_175 -to dram_ra[1]
+set_location_assignment PIN_176 -to dram_ra[7]
+set_location_assignment PIN_177 -to dram_ra[0]
+set_location_assignment PIN_179 -to dram_ra[8]
+set_location_assignment PIN_180 -to dram_ra[9]
+set_location_assignment PIN_191 -to dram_rd[8]
+set_location_assignment PIN_192 -to dram_rd[7]
+set_location_assignment PIN_193 -to dram_rd[9]
+set_location_assignment PIN_195 -to dram_rd[6]
+set_location_assignment PIN_196 -to dram_rd[10]
+set_location_assignment PIN_197 -to dram_rd[5]
+set_location_assignment PIN_198 -to dram_rd[11]
+set_location_assignment PIN_199 -to dram_rd[4]
+set_location_assignment PIN_200 -to dram_rd[12]
+set_location_assignment PIN_202 -to dram_rd[3]
+set_location_assignment PIN_203 -to dram_rd[13]
+set_location_assignment PIN_204 -to dram_rd[2]
+set_location_assignment PIN_205 -to dram_rd[14]
+set_location_assignment PIN_206 -to dram_rd[1]
+set_location_assignment PIN_207 -to dram_rd[15]
+set_location_assignment PIN_208 -to dram_rd[0]
 set_global_assignment -name VERILOG_FILE ../video/video_ts_render.v
 set_global_assignment -name VERILOG_FILE ../video/video_ts.v
 set_global_assignment -name VERILOG_FILE ../video/mem/video_tsline1.v
@@ -296,6 +296,7 @@ set_global_assignment -name VERILOG_FILE ../video/video_fetch.v
 set_global_assignment -name VERILOG_FILE ../video/video_render.v
 set_global_assignment -name VERILOG_FILE ../video/video_out.v
 set_global_assignment -name VERILOG_FILE ../sound/sound.v
+set_global_assignment -name VERILOG_FILE ../z80/zsignals.v
 set_global_assignment -name VERILOG_FILE ../z80/zpager.v
 set_global_assignment -name VERILOG_FILE ../z80/zmaps.v
 set_global_assignment -name VERILOG_FILE ../z80/znmi.v
