--- a/pentevo/soft/WC/exe/wc.ini
+++ b/pentevo/soft/WC/exe/wc.ini
@@ -2,3 +2,6 @@ Wild Commander configuration file v0.1
 MOUNTER .WMF
 ROM_PROG.WMF
 WP333_6 .WMF
+
+
+;данный файл и все плагины нужно разместить в папке WC (в корне SD карты)
