WC: added new plug-in (screen saver by r0bat), added indication into drive selection menu (TRD Mounter).

--- a/pentevo/soft/WC/exe/wc.ini
+++ b/pentevo/soft/WC/exe/wc.ini
@@ -2,6 +2,7 @@ Wild Commander configuration file v0.1
 MOUNTER .WMF
 ROM_PROG.WMF
 WP333_6 .WMF
+SCRSAVER.WMF
 
 
 ;данный файл и все плагины нужно разместить в папке WC (в корне SD карты)
