WC: changed DMA algorithms, added information about current config (F1 window).

--- a/pentevo/soft/WC/exe/wc.ini
+++ b/pentevo/soft/WC/exe/wc.ini
@@ -4,5 +4,5 @@ ROM_PROG.WMF
 WP333_6 .WMF
 SCRSAVER.WMF
 
-
+;this file and all plug-ins must be placed in WC folder (in root dir of SD card)
 ;данный файл и все плагины нужно разместить в папке WC (в корне SD карты)
