WC: added GS Player plug-in (plays MOD/WAV), deleted reading from FSInfo, fixed bug in name-filter, flags ABT, ENT moved to fixed addresses.

--- a/pentevo/soft/WC/exe/wc.ini
+++ b/pentevo/soft/WC/exe/wc.ini
@@ -2,7 +2,8 @@ Wild Commander configuration file v0.1
 MOUNTER .WMF
 ROM_PROG.WMF
 WP333_6 .WMF
+GSPLAYER.WMF
 SCRSAVER.WMF
 
-;this file and all plug-ins must be placed into WC folder (in root dir of SD card)
-;данный файл и все плагины нужно разместить в папке WC (в корне SD карты)
+;this file and all plug-ins must be placed into WC folder (in root dir of Boot-Device)
+;данный файл и все плагины нужно разместить в папке WC (в корне загрузочного устройства, которое выбирается в ts-bios'e)
