WC: added new plug-in - Video Player, new version of plug-in system (update all plug-ins!), added ability to mounting TRD's of any sizes (TRD Mounter), added new function into FAT engine (needed for Video Player).

--- a/pentevo/soft/WC/exe/wc.ini
+++ b/pentevo/soft/WC/exe/wc.ini
@@ -3,6 +3,7 @@ MOUNTER .WMF
 ROM_PROG.WMF
 WP333_6 .WMF
 GSPLAYER.WMF
+VIDEO_PL.WMF
 SCRSAVER.WMF
 
 ;this file and all plug-ins must be placed into WC folder (in root dir of Boot-Device)
