--- a/pentevo/unreal/Unreal/cfg/Unreal.ini
+++ b/pentevo/unreal/Unreal/cfg/Unreal.ini
@@ -380,7 +380,7 @@ CDROM=;ASPI;SPTI  ; SPTI (native WinNT) or ASPI (use 3rd-party library wnaspi32.
 ; for image file, specify filename with full path, else it'll not work
 
 ; master device. specify image filename or <MODEL,SERIAL> to use real drive
-Image0=v:\@\45\zx.hdd
+Image0=v:\@\45\wc.hdd
 CHS0=1572/16/63  ; max size, accessible through CHS. not used for real drive
 LBA0=1584968     ; max size, accessible through LBA. not used for real drive
 HD0RO=0         ; read only flag
