Unreal: updated ROM image for TS, fixed 16c temporary renderer, added 0x08 CMD for ATA, ini: changed path to HDD image, added 14MHz settings

--- a/pentevo/unreal/Unreal/bin/Unreal.ini
+++ b/pentevo/unreal/Unreal/bin/Unreal.ini
@@ -88,9 +88,11 @@ NewlineDelay=20
 
 
 [ULA]
-Frame=71680   ; t-states in frame
+; Frame=71680   ; t-states in frame
+Frame=250000   ; t-states in frame	- 14MHz
 Paper=17989   ; t-states before paper
-Line=224      ; t-states in line
+; Line=224      ; t-states in line
+Line=784      ; t-states in line	- 14MHz
 int=50        ; int freq
 intlen=32     ; int length in t-states
 EvenM1=0      ; align M1 cycle to even T-state (for scorpion)
@@ -283,7 +285,7 @@ RamSize=2048    ; ngs ram size 2048, 4096
 
 [ZC]            ; Z-Controller settings
 ; sdcard image
-SDCARD=v:\@\45\zx.hdd
+SDCARD=v:\@\45\wc.hdd
 
 
 [SAA1099]
