Unreal: added border sizes selection, src only

--- a/pentevo/unreal/Unreal/Unreal.rc
+++ b/pentevo/unreal/Unreal/Unreal.rc
@@ -301,17 +301,6 @@ FONT 8, "MS Sans Serif", 0, 0, 0x1
 BEGIN
     LTEXT           "&filter",IDC_STATIC,7,11,23,8
     COMBOBOX        IDC_VIDEOFILTER,45,9,134,60,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    GROUPBOX        "",IDC_STATIC,45,20,134,19
-    LTEXT           "chunk size",IDC_CH_TITLE,7,27,35,8
-    CONTROL         "&2x2",IDC_CH2,"Button",BS_AUTORADIOBUTTON,53,27,31,10
-    CONTROL         "&4x4",IDC_CH4,"Button",BS_AUTORADIOBUTTON,88,27,32,10
-    CONTROL         "auto-detect",IDC_CH_AUTO,"Button",BS_AUTORADIOBUTTON,125,27,52,10
-    LTEXT           "border",IDC_B_TITLE,7,27,29,8
-    CONTROL         "Non&e",IDC_B0,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,53,27,31,10
-    CONTROL         "Sm&all",IDC_B1,"Button",BS_AUTORADIOBUTTON,88,27,33,10
-    CONTROL         "Com&plete",IDC_B2,"Button",BS_AUTORADIOBUTTON,125,27,45,10
-    LTEXT           "pale&tte",IDC_STATIC,7,43,31,8
-    COMBOBOX        IDC_PALETTE,45,41,134,60,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     LTEXT           "ren&der to",IDC_REND_TITLE,7,58,29,8
     COMBOBOX        IDC_RENDER,45,56,85,60,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     CONTROL         "&low quality",IDC_FAST_SL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,133,57,46,10
@@ -338,6 +327,10 @@ BEGIN
     LTEXT           "4x",IDC_VSCALE_TITLE3,167,141,8,8
     COMBOBOX        IDC_SCRSHOT,45,95,41,60,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     LTEXT           "scrshot to",IDC_REND_TITLE2,7,97,32,8
+    COMBOBOX        IDC_PALETTE,45,41,134,60,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "pale&tte",IDC_STATIC,7,43,31,8
+    COMBOBOX        IDC_BORDERSIZE,45,23,134,60,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "border",IDC_B_TITLE2,7,25,29,8
 END
 
 IDD_EFF7 DIALOG 0, 0, 203, 126
