--- a/pentevo/unreal/Unreal/cfg/Unreal.ini
+++ b/pentevo/unreal/Unreal/cfg/Unreal.ini
@@ -1,6 +1,6 @@
 [*] unreal speccy configuration file [*]
 
-UNREAL=0.37.8   ; make sure you don't have old INI version
+UNREAL=0.37.9   ; make sure you don't have old INI version
 
 
 [MISC]
@@ -131,7 +131,7 @@ FullScr=0     ; start at full-screen. windowed mode can be used only for
 Refresh=0     ; monitor refresh rate in fullscreen mode (0-default).
               ; for video=resampler, the more - the better
 
-Border=wide  ; border size:            none / small / wide
+Border=3	  ; border size - 0: 256x192, 1: 320x200, 2: 320x240, 3: 360x288, 4: 384x304, 5: 448x320
 NoFlic=0      ; apply noflic filter
 AltNoFlic=0   ; use interlaced algorithm for video=double
 FlashColor=0  ;
@@ -260,7 +260,7 @@ Fq=44100        ; check maximum sampling rate in your soundcard manual
                 ; setting freq not supported by hardware
                 ; will cause resampling and degrade quality and performance
 
-GSType=Z80      ; BASS, Z80 or NONE
+GSType=BASS      ; BASS, Z80 or NONE
 GSReset=1       ; reinit GS on reset
 
 SD=0            ; enable/disable soundrive
@@ -285,7 +285,7 @@ RamSize=2048    ; ngs ram size 2048, 4096
 
 [ZC]            ; Z-Controller settings
 ; sdcard image
-SDCARD=v:\@\45\wc.hdd
+SDCARD=v:\VM\ZX\wc.hdd
 
 
 [SAA1099]
@@ -382,7 +382,7 @@ CDROM=;ASPI;SPTI  ; SPTI (native WinNT) or ASPI (use 3rd-party library wnaspi32.
 ; for image file, specify filename with full path, else it'll not work
 
 ; master device. specify image filename or <MODEL,SERIAL> to use real drive
-Image0=v:\@\45\wc.hdd
+Image0=v:\VM\ZX\wc.hdd
 CHS0=1572/16/63  ; max size, accessible through CHS. not used for real drive
 LBA0=1584968     ; max size, accessible through LBA. not used for real drive
 HD0RO=0         ; read only flag
