--- a/pentevo/unreal/Unreal/cfg/Unreal.ini
+++ b/pentevo/unreal/Unreal/cfg/Unreal.ini
@@ -53,7 +53,7 @@ Modem=NONE      ; NONE or COM1-COM255
 ; file may be compressed, but only one file in archive is allowed
 
 
-diskA=
+diskA=boot.$b
 diskB=
 diskC=
 diskD=
@@ -88,11 +88,11 @@ NewlineDelay=20
 
 
 [ULA]
-; Frame=71680   ; t-states in frame
-Frame=250000   ; t-states in frame	- 14MHz
-Paper=17989   ; t-states before paper
-; Line=224      ; t-states in line
-Line=784      ; t-states in line	- 14MHz
+Frame=71680   ; t-states in frame
+; Frame=250000   ; t-states in frame	- 14MHz
+Paper=17991   ; t-states before paper
+Line=224      ; t-states in line
+; Line=784      ; t-states in line	- 14MHz
 int=50        ; int freq
 intlen=32     ; int length in t-states
 EvenM1=0      ; align M1 cycle to even T-state (for scorpion)
@@ -236,7 +236,7 @@ Traps=1 ; intercept sector save/load routines in TR-DOS ROM for faster loading
 Fast=1  ; disable all FDD/FDC delays. some programs will not work
 IL=1    ; sector interleave (1=1:1, 2=2:1, 3=3:1) applied when loading TRD/SCL
         ; if you prefer fast=0, set to 2 for 3d13 loaders, to 1 for turbo-loaders
-;BOOT=boot.$b
+BOOT=boot.$b
 
 [SOUND]
 SoundFilter=0   ; lowpass filter (good for beeper)
@@ -260,7 +260,7 @@ Fq=44100        ; check maximum sampling rate in your soundcard manual
                 ; setting freq not supported by hardware
                 ; will cause resampling and degrade quality and performance
 
-GSType=BASS      ; BASS, Z80 or NONE
+GSType=BASS     ; BASS, Z80 or NONE
 GSReset=1       ; reinit GS on reset
 
 SD=0            ; enable/disable soundrive
@@ -285,7 +285,7 @@ RamSize=2048    ; ngs ram size 2048, 4096
 
 [ZC]            ; Z-Controller settings
 ; sdcard image
-SDCARD=v:\VM\ZX\wc.hdd
+SDCARD=d:\VM\wc.hdd
 
 
 [SAA1099]
@@ -382,7 +382,7 @@ CDROM=;ASPI;SPTI  ; SPTI (native WinNT) or ASPI (use 3rd-party library wnaspi32.
 ; for image file, specify filename with full path, else it'll not work
 
 ; master device. specify image filename or <MODEL,SERIAL> to use real drive
-Image0=v:\VM\ZX\wc.hdd
+Image0=d:\VM\wc.hdd
 CHS0=1572/16/63  ; max size, accessible through CHS. not used for real drive
 LBA0=1584968     ; max size, accessible through LBA. not used for real drive
 HD0RO=0         ; read only flag
